--- a/packages/app-icon-explorer/src/components/IconDetailsPanel/components/CodeBlock.module.scss
+++ b/packages/app-icon-explorer/src/components/IconDetailsPanel/components/CodeBlock.module.scss
@@ -13,20 +13,29 @@
   border: none;
   padding: 0;
   cursor: pointer;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   color: $color-ink-lighter;
+
+  @media (min-width: 40em) {
+    font-size: 1.2rem;
+  }
 }
 
 .code {
   font-family: unquote($font-stack-monospace);
-  font-size: 12px;
+  font-size: 1.4rem;
   line-height: 1.5;
   border-radius: 0.6rem;
   background-color: $color-sky-lighter;
   margin: $spacing-tight 0 $spacing-extra-tight;
-  padding: $spacing-base-tight;
+  padding: $spacing-base;
   white-space: pre-wrap;
   word-break: break-all;
+
+  @media (min-width: 40em) {
+    font-size: 1.2rem;
+    padding: $spacing-base-tight;
+  }
 }
 
 .syntaxImport {
